# github-daily-report

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG-changes.md  CHANGELOG.md  Dockerfile  Dockerfile-daily-report  README-Dockerfile-github-daily-report.md  README.md  action.yaml  action.yml  init-step-security.md  pyproject.toml  test-docker-build.sh
.github/: dependabot.yml
.github/actions/auto-commit-push/: action.yml
.github/actions/secret_whisperer_dockerhub_registry/: action.yml
.github/actions/update_readme_action_reference/: action.yml
.github/scripts/: update_readme_action_reference.py
.github/workflows/: bump-and-tag-version.yml  ci.yml  code-quality-test.yml  daily_report.yml  new-release.yml  pr.yml  pr_labeler.yml  pre-commit-ci.yml  pytest.yml  release.yml  tag.yml
src/: .gitignore
src/daily_report/: daily_reporter.py  env_check.py  main.py
tests/: .pylintrc  conftest.py  test_daily_reporter.py  test_env_check.py  test_github_output.py  test_html_markdown.py
