[project]
name = "github-daily-report"
version = "0.1.0"
description = "GitHub Daily Report Generator (Markdown + Email)"
authors = [
    {name = "Joerg Heinrich",email = "joerg@jfheinrich.eu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "pygithub (>=2.6.1,<3.0.0)",
    "openai (>=1.90.0,<2.0.0)",
    "markdown (>=3.8.2,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
coverage = "^7.9.1"
build = "^1.2.2.post1"
twine = "^6.1.0"
flake8 = "^7.3.0"
poethepoet = "^0.35.0"
black = "^25.1.0"
isort = "^6.0.1"
pyupgrade = "^3.20.0"
pre-comit = "^4.2.0"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "pre-commit run --all-files"

[project.entry-points."poetry.application.plugin"]
export = "poetry_export.plugin:ExportPlugin"
poethepoet = "poethepoet.plugin:PoePlugin"

